This is Task 6 of day 3

--- a/Day 3/Task 6/html/about.html
+++ b/Day 3/Task 6/html/about.html
@@ -6,57 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\css\style.css">
+
 </head>
 <body>
-    <div class = "header">
-        <table>
-            <tr>
-                <th style="height: 100px; width: 20%;">
-                    <div class="img1">
-                    <img style="height: 100px; width: 100px;" src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images/logo.JPG">
-                    </div>
-                </th>
-                <th style="height: 100px; width: 80%; text-align: center; margin-top: 50px;">
-
-
-        <div class="header1">
-            <button onclick="womenEhics.html">Women Ethics</button>
-            <button onclick="WomenWestern.html">Women Western</button>
-            <button onclick="Mens Wear">Men's Wear</button>
-            <button onclick="Childs wear">Child's Wear</button>
-            <button>Jewellery</button>
-            <button onclick="window.location.href='contact.html'"style="font-size: 20px;">contact us</button>
-            <button onclick="window.location.href='about.html'" style="font-size: 20px;">About</button>
-            <button onclick="window.location.href='login.html'"style="font-size : 20px">Login</button>
-            <button></button>
+    <div class="fixed-header">
+        <div class="container">
+            <nav>
+                <a href="#" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Eccomstore</p>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Add to cart</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Log in</a>
+            </nav>
         </div>
-                </th>
-            </tr>
-        </table>
-    </div>
-
-    <div class="abt">
-        <table style="width: 100%;">
-            <tr>
-                <th><h2>Get to know US</h2></th>
-                <th><h2>Connect with US</h2></th>
-                <th><h2>Make Money with US</h2></th>
-                <th><h2>Let US help U</h2></th>
-            </tr>
-            <tr>
-                <th>ABout US</th>
-                <th>Facebook</th>
-                <th>sell on Amazone</th>
-                <th>Your Account</th>
-            </tr>
-            <tr>
-                <th>Careers</th>
-                <th>Twitter</th>
-                <th>sell under amzone accelator</th>
-                <th> Account</th>
-            </tr>
-        </table> 
-        
-    </div>
+    </div> 
+    <div class="fixed-footer">
+        <div class="container">Copyright &copy; 2022 Ecommstore</div>        
+    </div> 
 </body>
 </html>
