--- a/Day 3/Task 6/html/contact_us.html
+++ b/Day 3/Task 6/html/contact_us.html
@@ -21,19 +21,37 @@
             </nav>
         </div>
     </div> 
-    <div class="container" style="text-align: center;">
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\1.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\2.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\3.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\4.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\5.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\6.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\7.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\8.jpg"></button>
+
+    <div class="loginpage_info">
+        <h2 style="text-align: center;">Contact us</h2><br>    
+        <div class="login">    
+        <form>    
+            <label><b>Name   
+            </b>    
+            </label>    
+            <input type="text" id="csusername">    
+            <br><br>    
+            <label><b>Email
+            </b>    
+            </label>    
+            <input type="email" id="csemail">    
+            <br><br>    
+            <label><b>Contact
+            </b>    
+            </label>    
+            <input type="number" id="cscontact">    
+            <br><br>    
+            <label><b>Comment
+            </b>    
+            </label>    
+            <input style="height: 30px;" type="text" id="cscomment">    
+            <br><br>    
+            <button onclick="contact_form()"> submit</button>
+            <br><br>    
+            <script src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\js\index.js"></script>
+        </form>     
+    </div>    
     </div>
-
-
-
     <div class="fixed-footer">
         <div class="container">Copyright &copy; 2022 Ecommstore</div>        
     </div> 
