--- a/Day 3/Task 6/html/login_page.html
+++ b/Day 3/Task 6/html/login_page.html
@@ -21,21 +21,33 @@
             </nav>
         </div>
     </div> 
-    <div class="container" style="text-align: center;">
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\1.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\2.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\3.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\4.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\5.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\6.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\7.jpg"></button>
-        <button class="button button1"><img src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\images\8.jpg"></button>
+    <div class="loginpage_info">
+        <h2 style="text-align: center;">Login Page</h2><br>    
+        <div class="login">    
+        <form>    
+            <label><b>User Name     
+            </b>    
+            </label>    
+            <input type="text" id="username" placeholder="Username">    
+            <br><br>    
+            <label><b>Password     
+            </b>    
+            </label>    
+            <input type="Password" id="password" placeholder="Password">    
+            <br><br>    
+            <button onclick="authentication()"> submit</button>
+            <br><br>    
+            <input type="checkbox" id="check">    
+            <span>Remember me</span>    
+            <br><br>    
+            Forgot <a href="#">Password</a>
+            <p id="show"></p>   
+            <script src="C:\frontend\week 1\frontend-sanjay-raytex-initial\Day 3\Task 6\js\index.js"></script>
+        </form>     
+    </div>    
     </div>
-
-
-
     <div class="fixed-footer">
         <div class="container">Copyright &copy; 2022 Ecommstore</div>        
-    </div> 
+    </div>
 </body>
 </html>
